--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
-    <title>Rock, Paper, Scissors!</title>
+    <title>Earth, Snow, Fire!</title>
 </head>
 
 <body>
