Added 3 buttons to HTML for selection options

--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
 </head>
 
 <body>
-
+    <div id="container">
+        <button id="1">Earth</button>
+        <button id="2">Snow</button>
+        <button id="3">Fire</button>
+    </div>
 </body>
 
 </html>
