Changed name back to rock, paper, scissors

--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
-    <title>Earth, Snow, Fire!</title>
+    <title>Rock, Paper, Scissors!</title>
 </head>
 
 <body>
     <div id="container">
-        <button id="1">Earth</button>
-        <button id="2">Snow</button>
-        <button id="3">Fire</button>
+        <button id='btn'>Earth</button>
+        <button id='btn'>Snow</button>
+        <button id='btn'>Fire</button>
     </div>
 </body>
 
