Added query selectors for all 3 buttons

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
 <body>
     <div id="container">
-        <button id='btn'>Earth</button>
-        <button id='btn'>Snow</button>
-        <button id='btn'>Fire</button>
+        <button id='rock'>Rock</button>
+        <button id='paper'>Paper</button>
+        <button id='scissors'>Scissors</button>
     </div>
 </body>
 
