--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 </head>
 
 <body>
+    <div class="running-score">
+        <span class="player-score">Player Score: </span>
+        <span class="computer-score">Computer Score: </span>
+    </div>
     <div id="container">
         <button class='rock'>Rock</button>
         <button class='paper'>Paper</button>
