Updated game and added reset/endgame function

--- a/index.html
+++ b/index.html
@@ -11,16 +11,18 @@
 </head>
 
 <body>
-    <div class="running-score">
-        <span class="player-score">Player Score: </span>
-        <span class="computer-score">Computer Score: </span>
+    <div>
+        Your score: <div id="user-score"></div>
+        CPU score: <div id="comp-score"></div>
     </div>
-    <div id="container">
-        <button class='rock'>Rock</button>
-        <button class='paper'>Paper</button>
-        <button class='scissors'>Scissors</button>
+
+    <div id="a1" class="score-board"></div>
+    <div id="a2" class="result"><p></p></div>
+    <div>
+        <button id="r">Rock</button>
+        <button id="p">Paper</button>
+        <button id="s">Scissors</button>
     </div>
-    <div class="outcome"></div>
 </body>
 
 </html>
