Added comments to HTML file

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <div id="a1" class="score-board"></div>
     <div id="a2" class="result"><p></p></div>
     <div>
+        <!-- used letters for id's and running a converting function in JS -->
         <button id="r">Rock</button>
         <button id="p">Paper</button>
         <button id="s">Scissors</button>
