--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Rock, Paper, Scissors</title>
 </head>
 <body>
-    
+    <button class="choice">Rock</button>
+    <button class="choice">Paper</button>
+    <button class="choice">Scissors</button>
 </body>
 <script src="script.js" defer></script>
 </html>
