Reverted changes and removed single letter variable name coverter function

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     <div id="a2" class="result"><p></p></div>
     <div>
         <!-- used letters for id's and running a converting function in JS -->
-        <button id="r">Rock</button>
-        <button id="p">Paper</button>
-        <button id="s">Scissors</button>
+        <button id="rock">Rock</button>
+        <button id="paper">Paper</button>
+        <button id="scissors">Scissors</button>
     </div>
 </body>
 
